# dev-podcast

./: .env.example  .gitignore  README.md  build-logs-3e0909c0-3efe-4357-8d67-bd1b450cfe7f.txt  pyproject.toml
.github/workflows/: build-fish.yml  build-worker.yml
baselines/2026-06-11-desmume/: settings.md  transcript.txt  turns.json
bench/: base_script.json  base_script_punct.json
docs/superpowers/specs/: 2026-06-09-dev-podcast-design.md
runpod/: DEPLOY.md  Dockerfile  handler.py
runpod_fish/: Dockerfile  handler.py
src/dev_podcast/: __init__.py  __main__.py  bench_tts.py  dialogue.py  personas.py  render.py  web.py
