[project]
name = "dev-podcast"
version = "0.1.0"
description = "Point at a GitHub repo, get a two-voice senior/junior dev podcast."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.69",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "flask>=3.0",
]

[project.scripts]
dev-podcast = "dev_podcast.__main__:main"
dev-podcast-render = "dev_podcast.render:main"
dev-podcast-web = "dev_podcast.web:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_podcast"]
